force-app/main/default/objects/PDRI__DataSet__c/PDRI__DataSet__c.object-meta.xml
<CustomObject>
    <description>Describes a set of data to be migrated.</description>
    <label>Data Set</label>
    <nameField>
        <label>Data Set Element Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Data Sets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>