force-app/main/default/objects/PDRI__DataSet__c/fields/PDRI__All_Fields__c.field-meta.xml
<CustomField>
    <fullName>PDRI__All_Fields__c</fullName>
    <defaultValue>false</defaultValue>
    <label>All Fields</label>
    <type>Checkbox</type>
</CustomField>