force-app/main/default/objects/PDRI__DataSet__c/fields/PDRI__Batch_Size__c.field-meta.xml
<CustomField>
    <fullName>PDRI__Batch_Size__c</fullName>
    <label>Batch Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>