force-app/main/default/objects/PDRI__DataSet__c/fields/PDRI__Data_Set_Name__c.field-meta.xml
<CustomField>
    <fullName>PDRI__Data_Set_Name__c</fullName>
    <formula>IF(PDRI__Root__c, 
IF($User.UIThemeDisplayed=&quot;Theme4d&quot;,HYPERLINK(&quot;/?sort=&quot; &amp; Name , &quot;&quot;) &amp; HYPERLINK(&quot;/one/one.app#/sObject/&quot; &amp; Id &amp; 
&quot;/view&quot;, Name, &quot;_self&quot;) 
,HYPERLINK(&quot;/?sort=&quot; &amp; Name , &quot;&quot;) &amp; HYPERLINK(&quot;/&quot;&amp;Id, Name, &quot;_self&quot;) ) , 
IF($User.UIThemeDisplayed=&quot;Theme4d&quot;,HYPERLINK(&quot;/?sort=&quot; &amp; PDRI__Root_Data_Set__r.Name, &quot;&quot;) &amp; 
HYPERLINK(&quot;/one/one.app#/sObject/&quot; &amp; PDRI__Root_Data_Set__r.Id &amp; &quot;/view&quot;, 
PDRI__Root_Data_Set__r.Name, &quot;_self&quot;), HYPERLINK(&quot;/?sort=&quot; &amp; PDRI__Root_Data_Set__r.Name, &quot;&quot;) &amp; 
HYPERLINK(&quot;/&quot;&amp;PDRI__Root_Data_Set__r.Id, 
PDRI__Root_Data_Set__r.Name, &quot;_self&quot;)) 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Data Set Name</label>
    <type>Text</type>
</CustomField>