force-app/main/default/objects/PDRI__DataSet__c/fields/PDRI__Destination_Object__c.field-meta.xml
<CustomField>
    <fullName>PDRI__Destination_Object__c</fullName>
    <label>Destination Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>