force-app/main/default/objects/PDRI__DataSet__c/fields/PDRI__Enable_Transformations__c.field-meta.xml
<CustomField>
    <fullName>PDRI__Enable_Transformations__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable Transformations</label>
    <type>Checkbox</type>
</CustomField>