force-app/main/default/objects/PDRI__DataSet__c/fields/PDRI__Exclude_Managed_Schema_Namespaces__c.field-meta.xml
<CustomField>
    <fullName>PDRI__Exclude_Managed_Schema_Namespaces__c</fullName>
    <label>Exclude Managed Schema Namespaces</label>
    <length>255</length>
    <type>Text</type>
</CustomField>