force-app/main/default/objects/PDRI__DataSet__c/fields/PDRI__Exclude_Unmanaged_Schema__c.field-meta.xml
<CustomField>
    <fullName>PDRI__Exclude_Unmanaged_Schema__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exclude Unmanaged Schema</label>
    <type>Checkbox</type>
</CustomField>