force-app/main/default/objects/PDRI__DataSet__c/fields/PDRI__Ignore_Namespace_Name__c.field-meta.xml
<CustomField>
    <fullName>PDRI__Ignore_Namespace_Name__c</fullName>
    <label>Ignore Namespace Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>