force-app/main/default/objects/PDRI__DataSet__c/fields/PDRI__Ignore_Relationship_Constraints__c.field-meta.xml
<CustomField>
    <fullName>PDRI__Ignore_Relationship_Constraints__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ignore Relationship Constraints</label>
    <type>Checkbox</type>
</CustomField>