force-app/main/default/objects/PDRI__DataSet__c/fields/PDRI__Origin_Connection__c.field-meta.xml
<CustomField>
    <fullName>PDRI__Origin_Connection__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Schema Org</label>
    <referenceTo>PDRI__Connection__c</referenceTo>
    <relationshipName>Data_Sets</relationshipName>
    <type>Lookup</type>
</CustomField>