force-app/main/default/objects/PDRI__DataSet__c/fields/PDRI__Override_Root_Settings__c.field-meta.xml
<CustomField>
    <fullName>PDRI__Override_Root_Settings__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Override Root Settings</label>
    <type>Checkbox</type>
</CustomField>