force-app/main/default/objects/PDRI__DataSet__c/fields/PDRI__Record_Selection_Limit__c.field-meta.xml
<CustomField>
    <fullName>PDRI__Record_Selection_Limit__c</fullName>
    <label>Record Selection Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>