force-app/main/default/objects/PDRI__DataSet__c/fields/PDRI__Replicate_Owner__c.field-meta.xml
<CustomField>
    <fullName>PDRI__Replicate_Owner__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Replicate Owner</label>
    <type>Checkbox</type>
</CustomField>