force-app/main/default/objects/PDRI__DataSet__c/fields/PDRI__Replicate_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>PDRI__Replicate_Record_Type__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Replicate Record Type</label>
    <type>Checkbox</type>
</CustomField>