force-app/main/default/objects/PDRI__DataSet__c/fields/PDRI__Set_Audit_Fields__c.field-meta.xml
<CustomField>
    <fullName>PDRI__Set_Audit_Fields__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Set Audit Fields</label>
    <type>Checkbox</type>
</CustomField>