force-app/main/default/objects/PDRI__DataSet__c/fields/PDRI__Use_Local_Schema__c.field-meta.xml
<CustomField>
    <fullName>PDRI__Use_Local_Schema__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Use Local Schema</label>
    <type>Checkbox</type>
</CustomField>