force-app/main/default/objects/PDRI__DataSet__c/listViews/Active_Data_Set_Elements.listView-meta.xml
<ListView>
    <fullName>Active_Data_Set_Elements</fullName>
    <columns>NAME</columns>
    <columns>PDRI__Data_Set_Name__c</columns>
    <columns>PDRI__Active__c</columns>
    <filterScope>Mine</filterScope>
    <label>Active Data Set Elements</label>
</ListView>